<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Contraceptive Ring</string>
	<string name="app_version">Version</string>
    <string name="email">ring@jfma.es \n</string>
    <string name="company_name">JFMA ™</string>
    <string name="help_traducing"> Help us translate the application to your language. Write us!</string>
	<string-array name="weekdays_short">
		<item>Mon</item>
		<item>Tue</item>
		<item>Wed</item>
		<item>Thu</item>
		<item>Fri</item>
		<item>Sat</item>
		<item>Sun</item>
	</string-array>
	<string-array name="months">
		<item>January</item>
		<item>February</item>
		<item>March</item>
		<item>April</item>
		<item>May</item>
		<item>June</item>
		<item>July</item>
		<item>August</item>
		<item>September</item>
		<item>October</item>
		<item>November</item>
		<item>December</item>
	</string-array>
	<string-array name="theme_names">
		<item>Pink</item>
		<item>Green</item>
		<item>Blue</item>
	</string-array>
	<string-array name="preferences_categories">
		<item>Week Start Day</item>
		<item>Calendar Theme</item>
		<item>Alarm</item>
		<item>Set Time</item>
		<item>Sound</item>
		<item>Vibration</item>
		<item>Buy Alarm</item>
		<item>Previous Days</item>
		<item>Set Time</item>
		<item>Sound</item>
		<item>Vibration</item>
	</string-array>
	<string-array name="start_week_day">
		<item>Monday</item>
		<item>Sunday</item>
	</string-array>
	<string-array name="yes_no_array">
		<item>No</item>
		<item>Yes</item>
	</string-array>
	<string-array name="prev_alarm_array">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>
	<string name="select_theme_dialog_title">¡Choose your colors!</string>
	<string name="select_startday_dialog_title">Week start day</string>
	<string name="select_diaryalarm_dialog_title">Do you want me to remind you when you have to take the ring in and also when you have to take it out?</string>
	<string name="select_cyclealarm_dialog_title">Do you want a buy alarm reminder?</string>
	<string name="select_prevdays_dialog_title">How many days before taking the ring in do you want me to remind you?</string>
	<string name="select_alarm_hour_dialog_title">Set Time</string>
	<string name="select_sound_dialog_title">Sound</string>
	<string name="select_vibrate_dialog_title">Vibration</string>
	<string name="preferences_calendar_separator">Calendar</string>
	<string name="preferences_alarms_separator">Alarms</string>
	<string name="ring_name">Ring</string>
	<string name="button_ok">OK</string>
	<string name="button_no">Cancel</string>
	<string name="menu_about">About</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_info">Info</string>
	<string name="alarm_info_toast">You can set alarms in the other tab</string>
	<string name="notification_bar_cycle_text1">You have to take the ring in, in</string>
	<string name="notification_bar_cycle_text2"> days!</string>
	<string name="notification_bar_cycle_text3">You have to take the ring in today!</string>
	<string name="notification_bar_cycle_text4">You have to take the ring in tomorrow!</string>
	<string name="day_touched_text">Are you sure you want to change the day you took the last ring in?</string>
	<string name="set_taking_ringday_toast">Click on the day you took the last ring in</string>
	<string name="rest_name">Rest</string>
	<string name="notification_bar_put_ring_text">¡Take the ring in!</string>
	<string name="notification_bar_remove_ring_text">¡Take the ring out!</string>
	<string name="notification_bar_buy_text">Remember buying it</string>
	<string name="button_calificate">Rate!</string>
	<string name="instructions"> \n First of all you must select the last day you started
	    a cycle of the contraceptive ring by clicking on the day in 
	    the calendar (you can change the month by selecting the arrows to the left 
	    or right) \n \n Finally you can set your options, as the reminder alarms or themes 
	    for the calendar in the preferences screen</string>
	
</resources>
